fix: add overflow wrap to CalloutBox
- Fixes visual bug when words are long and extend past the edge of the CalloutBox when the browser window is small (e.g. for long variable names)

--- a/src/components/callout-box/styles.module.css
+++ b/src/components/callout-box/styles.module.css
@@ -3,6 +3,7 @@
   padding: 1rem;
   border-left: 0.5rem solid var(--blue);
   margin: 1rem 3rem;
+  overflow-wrap: break-word;
 }
 
 .container :first-child {
